external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_have_unique_scopes.exp
error[E04032]: unable to expand macro function
   ┌─ tests/move_2024/typing/macros_have_unique_scopes.move:19:38
   │
19 │         foo!(0, || { let (_, _, x) = foo!(0, || { let x = @0; x }); x });
   │         -----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------
   │         │                            │
   │         │                            Recursive macro expansion. 'a::m::foo' has already been expanded
   │         'a::m::foo' previously expanded here

error[E04032]: unable to expand macro function
   ┌─ tests/move_2024/typing/macros_have_unique_scopes.move:24:35
   │  
22 │ ╭         bar!(
23 │ │             vector[0],
24 │ │             |x| { let (_, _, x) = bar!(vector[0], |x| { let x = get(x); x }, get(x)); x },
   │ │                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Recursive macro expansion. 'a::m::bar' has already been expanded
25 │ │             vector[vector[@0]],
26 │ │         );
   │ ╰─────────' 'a::m::bar' previously expanded here

